--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ error-iter = "0.4"
 glam = "0.30.1"
 log = "0.4"
 pixels = "0.15.0"
+rand = "0.9.0"
+rand_distr = "0.5.1"
 web-time = "1.1.0"
 winit = "0.29"
 winit_input_helper = "0.15"
@@ -22,6 +24,7 @@ console_log = "1"
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = ["GpuTextureFormat"] }
+getrandom = { version = "0.3.2", features = ["wasm_js"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 env_logger = "0.10"
