--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ log = "0.4"
 pixels = "0.15.0"
 rand = "0.9.0"
 rand_distr = "0.5.1"
+regex = "1.11.1"
 web-time = "1.1.0"
 winit = "0.29"
 winit_input_helper = "0.15"
