--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ default = ["optimize"]
 [dependencies]
 enum-map = "2.7.3"
 error-iter = "0.4"
+fxhash = "0.2.1"
 glam = "0.30.1"
 log = "0.4"
 pixels = "0.15.0"
